# dockerview

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: workflow.yml
src/dockerview/: cli.py  monitor.py
